<resources>
    <string name="app_name">Udyam Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_process">Our Process</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello GallerySecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello SlideshowSecondFragment. Arg: %1$s</string>
    <string name="our_mission">The mission of our organization is to expedite all the recently developed and developing enterprises of India to operate at their greatest potential</string>
    <string name="about_us">Just MSME has the fastest and most user-friendly system for solving all your MSME related legal issues. We ensure the safekeeping of any confidential information by deploying the most advanced security tools. Our customer support department shall lead you through consultation as well as make you aware of all your reserved benefits.\n\nIf you are thinking of commencing a new business or taking your current business to new heights, you can always count on us for the best financial and legal advice.</string>
    <string name="mission">Mission</string>
    <string name="vision">Vision</string>
    <string name="our_vision">We strive at expediting micro, small, and medium entrepreneurs on legal requirements by providing our user-friendly and efficient services</string>
    <string name="core_values">Core Values</string>
    <string name="hassle_free_experience">Hassle Free Experience</string>
    <string name="contribution_to_society">Contribution to Society</string>
    <string name="commitment">Commitment</string>
    <string name="steps_involved">Steps Involved</string>
    <string name="contact_details">Contact Details</string>
    <string name="call_us">Call Us</string>
    <string name="mail_us">Mail Us</string>
    <string name="our_services">Our Services</string>
    <string name="start_now">START NOW</string>
    <string name="contact">18001216896 (Toll Free)</string>
    <string name="our_email">info@justmsme.com</string>
</resources>