<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.justmsme.udyam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.justmsme.udyam.ui.home.HomeSecondFragment"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_process"
        android:name="com.justmsme.udyam.ui.process.ProcessFragment"
        android:label="@string/menu_process"
        tools:layout="@layout/fragment_process" />

    <fragment
        android:id="@+id/nav_faqs"
        android:name="com.justmsme.udyam.ui.faqs.FaqsFragment"
        android:label="@string/menu_faqs"
        tools:layout="@layout/fragment_faqs" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.justmsme.udyam.ui.about.AboutFragment"
        android:label="About Us"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.justmsme.udyam.ui.contact.ContactFragment"
        android:label="Contact Us"
        tools:layout="@layout/fragment_contact" />
</navigation>